--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "tailwindcss-fluid-type": "^2.0.6"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@fontsource-variable/inter": "^5.0.17",
+    "@fontsource/old-standard-tt": "^5.1.0",
+    "@fontsource/unifrakturcook": "^5.1.0",
     "micromodal": "^0.4.10",
     "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
     "tiny-invariant": "^1.3.3",
-    "@astrojs/check": "^0.9.4",
     "typescript": "^5.6.3"
   }
 }
