--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@fontsource-variable/grenze-gotisch": "^5.1.0",
     "@fontsource-variable/inter": "^5.0.17",
+    "@fontsource/new-rocker": "^5.1.0",
     "@fontsource/old-standard-tt": "^5.1.0",
     "@fontsource/unifrakturcook": "^5.1.0",
     "micromodal": "^0.4.10",
