--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@iconify-json/fa-brands": "^1.1.8",
     "@iconify-json/mdi": "^1.1.66",
+    "@iconify-json/ri": "^1.2.3",
     "@types/micromodal": "^0.3.5",
     "astro": "^4.6.3",
     "astro-icon": "^1.1.0",
