--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fontsource/new-rocker": "^5.1.0",
     "@fontsource/old-standard-tt": "^5.1.0",
     "@fontsource/unifrakturcook": "^5.1.0",
+    "@vercel/analytics": "^1.3.2",
     "micromodal": "^0.4.10",
     "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
