--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fontsource/old-standard-tt": "^5.1.0",
     "@fontsource/unifrakturcook": "^5.1.0",
     "@vercel/analytics": "^1.3.2",
+    "@vercel/speed-insights": "^1.0.14",
     "micromodal": "^0.4.10",
     "sharp": "^0.33.3",
     "tailwindcss": "^3.4.3",
