--- a/package.json
+++ b/package.json
@@ -27,14 +27,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/vercel": "^7.8.2",
+    "@astrojs/netlify": "^6.6.3",
     "@fontsource-variable/grenze-gotisch": "^5.1.0",
     "@fontsource-variable/inter": "^5.1.0",
     "@fontsource/new-rocker": "^5.1.0",
     "@fontsource/old-standard-tt": "^5.1.0",
     "@fontsource/unifrakturcook": "^5.1.0",
-    "@vercel/analytics": "^1.3.2",
-    "@vercel/speed-insights": "^1.0.14",
     "micromodal": "^0.4.10",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.14",
