--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "inferno",
   "type": "module",
   "version": "0.0.1",
+  "engines": {
+    "node": ">=18 <22"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
